gap fixes and stuff

--- a/app/style.css
+++ b/app/style.css
@@ -1522,8 +1522,12 @@ body:has(#dev-banner) #userlist {
   top: 76px;
 }
 
+body:has(#dev-banner) #channels {
+  top: 76px;
+}
+
 body:has(#dev-banner) ul {
-  padding-top: 92px;
+  top: 92px;
 }
 
 body:has(#dev-banner).login-page {
@@ -2423,7 +2427,7 @@ body:has(#dev-banner) #version-status {
   }
 
   body:has(#dev-banner) ul {
-    padding-top: 100px;
+    top: 92px;
   }
 
   body:has(#dev-banner) #username-form {
